--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CEK STOCK DAN HARGA</title>
+    <title>Upload Data to Google Sheets</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -86,7 +86,7 @@
 </div>
 
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbxicQkYajUTC5piBRy9ZNTCDtFo1IM-QfU81yqLJf9MTMkPQF1RkDe5rcBroHCTyLRU9Q/exec'; // Ganti dengan URL script Google Apps Anda
+    const scriptURL = 'https://script.google.com/macros/library/d/1MTaUPHHPAAM29ZPvAqKSwOodl4r0wrX8XAhYDx6RgRl498h-UGAxTtaz/2'; // Ganti dengan URL script Google Apps Anda
     const form = document.forms['dataForm'];
 
     // Set the current date automatically
