--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 
 <div class="container">
-    <h2>Upload Data with Image to Google Sheets</h2>
+    <h2>CEK STOCK DAN HARGA</h2>
     <form id="dataForm">
         <div class="form-group">
             <label for="date">Date:</label>
