--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
         <div class="form-group">
             <label for="pic">PIC Sales:</label>
             <select id="pic" name="pic" required>
-                <option value="DIAN">DIAN</option>
-                <option value="BHERTA">BHERTA</option>
-                <option value="FEBI">FEBI</option>
-                <option value="GILANG">GILANG</option>
+                <option value="DIAN">GDK</option>
+                <option value="BHERTA">HRC</option>
+                <option value="FEBI">LIC</option>
+                <option value="GILANG">PST</option>
             </select>
         </div>
         <div class="form-group">
